[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scenes/Main/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/HUD/reticle.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Main/HUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Title1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/Button1.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/Main/Menu_Pause.gd" type="Script" id=6]
[ext_resource path="res://Assets/Audio/Player/Fart1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Audio/Player/Walk_Grass1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Audio/Player/Walk_Water1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Audio/Player/Walk_Sand1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Audio/Player/Walk_Stone1.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/Player/Drown1.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/Player/Run_Sand1.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/Audio/Player/Run_Stone1.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/Fonts/Small1.tres" type="DynamicFont" id=15]

[sub_resource type="CapsuleShape" id=1]
height = 2.0

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.0627451, 0.0705882, 0.505882, 1 )
ambient_light_color = Color( 0.00392157, 0, 0.403922, 1 )
tonemap_mode = 2
dof_blur_far_enabled = true
dof_blur_far_amount = 0.2
dof_blur_near_enabled = true
dof_blur_near_amount = 0.2
adjustment_brightness = 0.75

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.768627, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.262745, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.254902, 0.388235, 0.980392, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0392157, 0, 0.27451, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.529412, 0.529412, 0.529412, 0.529412 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.235294, 0.235294, 0.235294, 0.784314 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="Player" type="KinematicBody"]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
fov = 80.0
near = 0.01
far = 8192.0

[node name="Camera_underwater" type="Camera" parent="Head"]
environment = SubResource( 2 )
fov = 60.0
near = 0.01
far = 128.0

[node name="Walk_Grass1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 8 )
unit_db = 10.0
pitch_scale = 2.6

[node name="Walk_Sand1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 10 )
pitch_scale = 1.32

[node name="Run_Sand1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 13 )
pitch_scale = 0.85

[node name="Walk_Stone1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 11 )
pitch_scale = 1.72

[node name="Run_Stone1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 14 )

[node name="Walk_Water1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 9 )
pitch_scale = 1.14

[node name="Drown1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 12 )
unit_db = -10.0
pitch_scale = 0.85

[node name="Fart1" type="AudioStreamPlayer3D" parent="Head"]
stream = ExtResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Reticle" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ProgressBar" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -30.0
margin_right = -3.99994
margin_bottom = -20.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="ProgressBar" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -304.0
margin_top = -15.0
margin_right = -3.99994
margin_bottom = -5.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Stamina"]
margin_top = -24.0
margin_right = 72.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 15 )
text = "Stamina:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="CanvasLayer" parent="."]
pause_mode = 2
process_priority = 2
layer = 100
rotation = -3.14159
transform = Transform2D( -1, -8.74228e-08, 8.74228e-08, -1, 0, 0 )
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="Pause"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="Pause"]
margin_left = 60.0
margin_top = 40.0
margin_right = 350.0
margin_bottom = 285.0
custom_fonts/font = ExtResource( 4 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Pause/Pause"]
margin_left = 65.0
margin_top = 160.0
margin_right = 665.0
margin_bottom = 242.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = " Continue"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue in VR" type="Button" parent="Pause/Pause"]
margin_left = 65.0
margin_top = 250.0
margin_right = 665.0
margin_bottom = 332.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = " Continue in VR"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="Button" parent="Pause/Pause"]
margin_left = 65.0
margin_top = 340.0
margin_right = 665.0
margin_bottom = 422.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = " Main Menu"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Pause/Pause"]
margin_left = 65.0
margin_top = 430.0
margin_right = 665.0
margin_bottom = 512.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 5 )
text = " Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARVROrigin" type="ARVROrigin" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
world_scale = 2.0

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]

[node name="ARVRController" type="ARVRController" parent="ARVROrigin"]
[connection signal="pressed" from="Pause/Pause/Continue" to="Pause" method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause/Pause/Continue in VR" to="Pause" method="_on_Continue_in_VR_pressed"]
[connection signal="pressed" from="Pause/Pause/Main Menu" to="Pause" method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="Pause/Pause/Quit" to="Pause" method="_on_Quit_pressed"]
